<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:screenOrientation="portrait"
        android:background="@android:color/white">

    <Button
            android:text="@string/txtIniciar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnIniciar"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:background="@color/colorAccent"
            android:textColor="@android:color/background_light" android:fontFamily="casual"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
            android:layout_marginBottom="1dp" app:layout_constraintBottom_toTopOf="@+id/btnAcercaDe"
            app:layout_constraintVertical_chainStyle="spread_inside"/>
    <Button
            android:text="@string/txtAcercaDe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnAcercaDe"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:background="@color/colorAccent"
            android:textColor="@android:color/background_light"
            android:fontFamily="casual" tools:layout_marginRight="@dimen/cinco" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnIniciar"
            android:layout_marginBottom="9dp" app:layout_constraintBottom_toTopOf="@+id/lottieAnimationView"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"/>

    <com.airbnb.lottie.LottieAnimationView
            android:layout_width="250dp"
            android:layout_height="145dp"
            android:layout_marginTop="8dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="dino_dance.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            app:layout_constraintTop_toBottomOf="@+id/btnAcercaDe" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="1.0" android:orientation="vertical"
            android:id="@+id/lottieAnimationView"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="117dp" app:srcCompat="@drawable/logo"
            android:id="@+id/imageView"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btnIniciar" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.507"/>
    <TextView
            android:text="@string/txtPuedes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/btnAcercaDe"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="@+id/lottieAnimationView"
            app:layout_constraintVertical_bias="0.061" android:fontFamily="casual"/>

</android.support.constraint.ConstraintLayout>